<resources>
    <string name="app_name">Version-18</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_abtversion">About Version</string>
    <string name="nav_abttheme">About Theme</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_map">Map</string>
    <string name="nav_staffmemb">Staff Member</string>
    <string name="nav_contactus">Contact Us</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_feedback">FeedBack</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>About Us</item>
        <item>About Theme</item>
        <item>Notifications</item>
        <item>Map</item>
        <item>Gallery</item>
        <item>Staff Member</item>
        <item>Schedule</item>
        <item>Contact Us</item>
        <item>Feedback</item>

    </string-array>


    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_log">Sign in</string>

    <!-- Strings related to login -->
    <string name="clgName">Your College Name</string>
    <string name="passkey">Pass Key</string>
    <string name="btnlogin">Login</string>
    <string name="movetoregister">Not yet register?Register Here</string>

    <!--Strings related to register page-->
    <string name="clgname">College Name</string>
    <string name="name">Your Name</string>
    <string name="clgemail">College Email</string>
    <string name="password">Password</string>
    <string name="confpwd">Confirm Password</string>
    <string name="clgContact">College Contact</string>
    <string name="tname">Team Name like Expendables or anything</string>
    <string name="membersNo">No of Members</string>
    <string name="m1">Member One</string>
    <string name="m2">Member Two</string>
    <string name="m3">Member Three</string>
    <string name="m4">Member Four</string>
    <string name="m5">Member Five</string>
    <string name="mname">Name</string>
    <string name="mphone">Phone No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="checkboxtext">Will a Guardian/Teacher accompany your team</string>
    <string name="checkboxtextview">Guardian/Teacher:</string>
    <string name="gname">Guardian Name</string>
    <string name="gphone">Guardian Phone</string>
    <string name="btnregister">Register</string>
    <string name="movetologin">Already Registered?\nLogin Here</string>
</resources>
